--- a/index.html
+++ b/index.html
@@ -18,38 +18,56 @@
             </ul>
         </div>
     </header>
-
+<hr>
 
     <section class="UXSKILLS">
         <div class="heroSection">
             <div class="text">
                 <ul>
                     <h1>My UX/UI Skills</h1>
-                    <p>User Research</p>
-                    <p>User Flows</p>
-                    <p>Wireframing-Prototyping</p>
-                    <p>Usability Test</p>
-                    <p>Interaction Design</p>
-                    <p>Problem-Solving</p>
+
                 </ul>
             </div>
+            <div class="grid-container">
+                <div>User Research</div>
+                <div>User Flows</div>
+                <div>Wireframing-Prototyping</div>
+                <div>Usability Test</div>
+                <div>Interaction Design</div>
+                <div>Problem-Solving</div>
+            </div>
 
-        </div>
-        <button class="button button1">Contact me</button>
-        </div>
       
-            <button class="button button1">More about me</button>
-        </div>
+        <br><br><br>
+      
+        <div class="text">
+            <ul>
+                <h1>My Projects</h1>
 
-    <footer>
-        <ul>
-            <p>Projects</p>
-            <p>About me</p>
-            <p>Contact info</p>
-            <p>Privacy and Policy</p>
-        </ul>
+            </ul>
 
-    </footer>
+
+            <div class="grid-container2">
+              <div>Project One</div>
+              <div>Project Three</div>
+              <div>Project Two</div>  
+              <div>Food Bank Canada</div>
+              <div> Canada Post Redesign</div>
+              <div>LOCALE' Travel App</div>  
+            </div>
+        <footer class="footer">
+            <ul>
+                <p>Projects</p>
+                <p>About me</p>
+                <p>Contact info</p>
+                <p>Privacy and Policy</p>
+            </ul>
+
+
+
+
+
+        </footer>
 </body>
 
 </html>
